fix: crew image vertical overflow

--- a/src/components/crew/_crew.scss
+++ b/src/components/crew/_crew.scss
@@ -48,6 +48,7 @@
         }
         .crew-img{
             order: 2;
+            position: relative;
             bottom: 0;
             width: 50%;
             margin: 0;
