--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -185,8 +185,7 @@ ul {
     padding: 1em;
     gap: 0.25em;
     background: rgba(255, 255, 255, 0.04);
-    -webkit-backdrop-filter: blur(81.5485px);
-            backdrop-filter: blur(81.5485px);
+    backdrop-filter: blur(81.5485px);
   }
 }
 @media screen and (min-width: 1000px) {
@@ -343,32 +342,32 @@ ul {
 
 @media screen and (min-width: 600px) {
   .destination-container .heading,
-.crew-container .heading,
-.technology-container .heading {
+  .crew-container .heading,
+  .technology-container .heading {
     margin: 0.25em 0;
   }
   .destination-container .sub-heading,
-.crew-container .sub-heading,
-.technology-container .sub-heading {
+  .crew-container .sub-heading,
+  .technology-container .sub-heading {
     text-align: left;
     margin-left: 3em;
   }
   .destination-container .container,
-.crew-container .container,
-.technology-container .container {
+  .crew-container .container,
+  .technology-container .container {
     width: 60%;
   }
   .destination-container .destination-img,
-.destination-container .crew-img,
-.crew-container .destination-img,
-.crew-container .crew-img,
-.technology-container .destination-img,
-.technology-container .crew-img {
+  .destination-container .crew-img,
+  .crew-container .destination-img,
+  .crew-container .crew-img,
+  .technology-container .destination-img,
+  .technology-container .crew-img {
     width: 20%;
   }
   .destination-container .destination-footer-info,
-.crew-container .destination-footer-info,
-.technology-container .destination-footer-info {
+  .crew-container .destination-footer-info,
+  .technology-container .destination-footer-info {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -378,8 +377,8 @@ ul {
 }
 @media screen and (min-width: 1000px) {
   .destination-info-container,
-.crew-info-container,
-.technology-container {
+  .crew-info-container,
+  .technology-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -387,67 +386,67 @@ ul {
     text-align: left;
   }
   .destination-info-container .destination-img,
-.destination-info-container .destination-info,
-.destination-info-container .crew-img,
-.destination-info-container .crew-info,
-.destination-info-container .technology-img,
-.destination-info-container .technology-info,
-.crew-info-container .destination-img,
-.crew-info-container .destination-info,
-.crew-info-container .crew-img,
-.crew-info-container .crew-info,
-.crew-info-container .technology-img,
-.crew-info-container .technology-info,
-.technology-container .destination-img,
-.technology-container .destination-info,
-.technology-container .crew-img,
-.technology-container .crew-info,
-.technology-container .technology-img,
-.technology-container .technology-info {
+  .destination-info-container .destination-info,
+  .destination-info-container .crew-img,
+  .destination-info-container .crew-info,
+  .destination-info-container .technology-img,
+  .destination-info-container .technology-info,
+  .crew-info-container .destination-img,
+  .crew-info-container .destination-info,
+  .crew-info-container .crew-img,
+  .crew-info-container .crew-info,
+  .crew-info-container .technology-img,
+  .crew-info-container .technology-info,
+  .technology-container .destination-img,
+  .technology-container .destination-info,
+  .technology-container .crew-img,
+  .technology-container .crew-info,
+  .technology-container .technology-img,
+  .technology-container .technology-info {
     width: 50%;
   }
   .destination-info-container .destination-img .container,
-.destination-info-container .destination-info .container,
-.destination-info-container .crew-img .container,
-.destination-info-container .crew-info .container,
-.destination-info-container .technology-img .container,
-.destination-info-container .technology-info .container,
-.crew-info-container .destination-img .container,
-.crew-info-container .destination-info .container,
-.crew-info-container .crew-img .container,
-.crew-info-container .crew-info .container,
-.crew-info-container .technology-img .container,
-.crew-info-container .technology-info .container,
-.technology-container .destination-img .container,
-.technology-container .destination-info .container,
-.technology-container .crew-img .container,
-.technology-container .crew-info .container,
-.technology-container .technology-img .container,
-.technology-container .technology-info .container {
+  .destination-info-container .destination-info .container,
+  .destination-info-container .crew-img .container,
+  .destination-info-container .crew-info .container,
+  .destination-info-container .technology-img .container,
+  .destination-info-container .technology-info .container,
+  .crew-info-container .destination-img .container,
+  .crew-info-container .destination-info .container,
+  .crew-info-container .crew-img .container,
+  .crew-info-container .crew-info .container,
+  .crew-info-container .technology-img .container,
+  .crew-info-container .technology-info .container,
+  .technology-container .destination-img .container,
+  .technology-container .destination-info .container,
+  .technology-container .crew-img .container,
+  .technology-container .crew-info .container,
+  .technology-container .technology-img .container,
+  .technology-container .technology-info .container {
     margin: 0;
   }
   .destination-info-container .destination-img,
-.destination-info-container .crew-img,
-.destination-info-container .technology-img,
-.crew-info-container .destination-img,
-.crew-info-container .crew-img,
-.crew-info-container .technology-img,
-.technology-container .destination-img,
-.technology-container .crew-img,
-.technology-container .technology-img {
+  .destination-info-container .crew-img,
+  .destination-info-container .technology-img,
+  .crew-info-container .destination-img,
+  .crew-info-container .crew-img,
+  .crew-info-container .technology-img,
+  .technology-container .destination-img,
+  .technology-container .crew-img,
+  .technology-container .technology-img {
     display: flex;
     align-items: center;
     justify-content: center;
   }
   .destination-info-container .destination-img img,
-.destination-info-container .crew-img img,
-.destination-info-container .technology-img img,
-.crew-info-container .destination-img img,
-.crew-info-container .crew-img img,
-.crew-info-container .technology-img img,
-.technology-container .destination-img img,
-.technology-container .crew-img img,
-.technology-container .technology-img img {
+  .destination-info-container .crew-img img,
+  .destination-info-container .technology-img img,
+  .crew-info-container .destination-img img,
+  .crew-info-container .crew-img img,
+  .crew-info-container .technology-img img,
+  .technology-container .destination-img img,
+  .technology-container .crew-img img,
+  .technology-container .technology-img img {
     width: 50%;
   }
 }
@@ -496,6 +495,7 @@ ul {
   }
   .crew-info-container .crew-img {
     order: 2;
+    position: relative;
     bottom: 0;
     width: 50%;
     margin: 0;
@@ -593,4 +593,6 @@ ul {
   .technology-container .technology-info-container .technology-info .container .para {
     max-width: 80%;
   }
-}/*# sourceMappingURL=index.css.map */
+}
+
+/*# sourceMappingURL=index.css.map */
